--- a/index.html
+++ b/index.html
@@ -121,6 +121,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="script.js"></script>
+    <script src="./develop/script.js"></script>
   </body>
 </html>
